--- a/src/components/FormElement/CheckBoxs/CheckBox4/CheckBox4.css
+++ b/src/components/FormElement/CheckBoxs/CheckBox4/CheckBox4.css
@@ -1,5 +1,5 @@
 /* Hide the default checkbox */
-.container input {
+.check4_container input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
@@ -7,8 +7,7 @@
   width: 0;
 }
 
-.container {
-  display: block;
+.check4_container {
   position: relative;
   cursor: pointer;
   font-size: 20px;
@@ -25,11 +24,7 @@
   background-color: transparent;
   transition: 0.4s ease-in-out;
   border-radius: 50%;
-  border: 1px solid #000000;
-}
-/* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
-  background-color: #2196f3;
+  border: 1px solid #2196f3;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -40,12 +35,13 @@
 }
 
 /* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
+.check4_container input:checked ~ .checkmark:after {
   display: block;
+  background-color: #2196f3;
 }
 
 /* Style the checkmark/indicator */
-.container .checkmark:after {
+.check4_container .checkmark:after {
   left: 0.2rem;
   top: 0.2rem;
   width: 1rem;
